name:                relational-Oracle
version:             0.1.0.0
synopsis:            Oracle DB driver for haskell-relational-record
description:         This package contains a driver of Oracle DB for haskell-relational-record.
license:             BSD3
license-file:        LICENSE
author:              Shohei YASUTAKE
maintainer:          shohei.yasutake@gmail.com
copyright:           Copyright (c) 2013 Shohei YASUTAKE
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:       Database.HDBC.Schema.Oracle
  other-modules:         Database.Relational.Schema.Oracle
                       , Database.Relational.Schema.OracleSyscat.ConsColumns
                       , Database.Relational.Schema.OracleSyscat.Constraints
                       , Database.Relational.Schema.OracleSyscat.TabColumns
  -- other-extensions:
  build-depends:         base <5
                       , bytestring
                       , containers
                       , template-haskell
                       , time
                       , HDBC
                       , names-th
                       , DB-record
                       , relational-join
                       , relational-query-HDBC
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
